<resources>
    <string name="app_name">Carmap</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="卫星地图">卫星地图</string>
    <string name="交通实况">交通实况</string>
    <string name="基础地图">基础地图</string>
    <string name="全景地图">全景地图</string>
    <string name="指纹安全">指纹安全</string>
    <string name="用户设置">连接蓝牙</string>

    <string name="cancel">取消</string>
    <string name="use_password">使用密码</string>
    <string name="sign_in">指纹识别</string>
    <string name="ok">提交</string>
    <string name="password">请输入密码</string>
    <string name="fingerprint_description">请输入指纹信息</string>
    <string name="fingerprint_hint">请触控指纹传感器</string>
    <string name="password_description">请输入密码</string>
    <string name="purchase">Purchase</string>
    <string name="fingerprint_not_recognized">指纹失败失败,请重试</string>
    <string name="fingerprint_success">指纹识别成功</string>
    <string name="item_title">White Mesh Pluto Backpack</string>
    <string name="item_price">$62.68</string>
    <string name="item_description">Mesh backpack in white. Black textile trim throughout.</string>
    <string name="purchase_done">提交成功</string>
    <string name="purchase_fail">提交失败</string>
    <string name="new_fingerprint_enrolled_description">您的设备添加了一个新的指纹，要求重新输入密码</string>
    <string name="use_fingerprint_in_future">稍后使用指纹识别</string>
    <string name="use_fingerprint_to_authenticate_title">Use fingerprint to authenticate</string>
    <string name="use_fingerprint_to_authenticate_key" >use_fingerprint_to_authenticate_key</string>
    <string name="password_error">密码错误</string>
    <string name="password_ok">密码正确</string>
    <string name="fistedit_password">请输入绑定指纹的密码</string>
    <string name="fist_text">请输入第一次密码</string>


    <string name="section_format">Page %1$d</string>

    <string name="sign_user">用户登陆</string>
</resources>
