<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_directions_bus_black_24dp"
            android:title="@string/交通实况" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_flight_black_24dp"
            android:title="@string/卫星地图" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_directions_walk_black_24dp"
            android:title="@string/基础地图" />

        <item
            android:id="@+id/leida"
            android:icon="@drawable/ic_menu_share"
            android:title="附近的人" />
        <item
            android:id="@+id/car"
            android:icon="@drawable/ic_call_24dp"
            android:title="车牌求助" />

    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_fingerprint_black_24dp"
                android:title="@string/指纹安全" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/用户设置" />
            <item
                android:id="@+id/nav_manage"
                android:icon="@drawable/ic_menu_manage"
                android:title="退出登陆" />

            <item
                android:id="@+id/det_user"
                android:icon="@drawable/ic_query_builder_24dp"
                android:title="隐匿用户" />
            <item
                android:id="@+id/wear"
                android:icon="@drawable/ic_watch_black_24dp"
                android:title="智能手表"
                ></item>

        </menu>
    </item>

</menu>
